# governed-inference-meter

./: .editorconfig  .gitattributes  AGENTS.md  CLAUDE.md  DEPRECATED.md  README.md  SECURITY.md  build.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  hf-mirror-drift-check.yml  hf-mirror.yml
scripts/: hf_mirror.py  hf_mirror_drift_check.py
tests/: test_attest.py  test_chain_hardening.py  test_meter.py  test_signing.py  test_spine.py
